...



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Enter IP Address and Port of the EV3 Robot to Connect"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="IP Address:"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/ev3_host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="192.168.1.100"
            android:digits="1234567890."
            android:inputType="number"
            android:imeOptions="actionNext|flagNoExtractUi"/>
...
            android:layout_height="wrap_content"
            android:text="Port:"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/ev3_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="7777"
            android:inputType="number"
            android:imeOptions="flagNoExtractUi"/>

...
